:sparkles: feat: init sql 작성이 완료 됨에 따른 기본 데이터 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     restart: always
     volumes:
       - co-task-data:/var/lib/mysql
-#      - ./mysql/init:/docker-entrypoint-initdb.d
+      - ./mysql/init:/docker-entrypoint-initdb.d
     networks:
       - co-task-network
   zipkin:
